<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2015 Iasc CHEN
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<resources>

    <string name="app_name">Microduino BLE Voice Controller</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="ready">Ready</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="without_service">Without Soft Serial Service</string>
    <string name="command">Voice Commands</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_add">New</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_resetdb">Reset Cmds Set</string>

    <string name="is_serial">Searching Serial</string>
    <string name="title_activity_voice_cmd_detail">VoiceCmdDetailActivity</string>

    <string name="cmd_code">Code</string>
    <string name="cmd_voice">Voice, Chinese is PinYin</string>
    <string name="cmd_name">Description</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Are you sure to delete the command</string>
    <string name="resetdb_confirm">Are you sure to reset commands set? All modification will be discard!</string>
    <string name="upload_confirm">Are you sure to upload voice control commands?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved">Unsaved record should not be deleted!</string>
    <string name="duplicated">Code or Voice conflicts with other command, please modify them.</string>
    <string name="duplicated_voice">Voice conflicts with other command, please modify them.</string>
    <string name="cmd_too_long">The length of Voice MUST be less 11</string>
    <string name="done">Done</string>

</resources>
