<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="me.iasc.microduino.bluevoice.VoiceCmdDetailActivity">


    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@android:color/holo_blue_bright"-->
    <!--tools:context="me.iasc.bigeyes.app.fragment.UserManagementFragment" android:orientation="vertical"-->
    <!--android:padding="10dp">-->

    <!--<view-->
    <!--android:layout_width="140dp"-->
    <!--android:layout_height="140dp"-->
    <!--class="me.iasc.microduino.bluevoice.app.common.RoundedImageView"-->
    <!--android:id="@+id/photoView"-->
    <!--android:src="@drawable/add"-->
    <!--android:layout_margin="10dp"-->
    <!--android:layout_gravity="center_horizontal"/>-->
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cmd_code"
            android:id="@+id/editCode" android:hint="Code" android:inputType="text" android:enabled="false"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editVoice"
            android:text="@string/cmd_voice"
            android:layout_marginTop="10dp"
            android:hint="Voice" android:inputType="text"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editName"
            android:text="@string/cmd_name"
            android:layout_marginTop="10dp"
            android:inputType="text" android:hint="Name"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/buttonSave"/>

    <Space android:layout_width="match_parent"
           android:layout_height="80dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/buttonDelete" android:textColor="@android:color/holo_red_dark"/>

    <!--</LinearLayout>-->
</LinearLayout>
